--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-garden",
-  "version": "0.7.8",
+  "version": "0.7.9",
   "description": "Vite Garden -- a part of the threed.ai family of JavaScript-friendly food-growing libraries",
   "repository": {
     "type": "git",
@@ -139,7 +139,7 @@
   },
   "devDependencies": {},
   "keywords": [
-    "@threed/contracts: ^0.0.1",
+    "vite-garden",
     "threedgarden",
     "threejs",
     "vite",
